force-app/main/default/objects/NPL_JHA_for_SDOCS__c/NPL_JHA_for_SDOCS__c.object-meta.xml
<CustomObject>
    <label>JHA</label>
    <nameField>
        <displayFormat>NPL JHA - {0000}</displayFormat>
        <label>JHA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JHAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>