force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Abnormal_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Abnormal_Conditions__c</fullName>
    <description>The abnormal conditions of the job(This field was created for NPL MA).</description>
    <label>Abnormal Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>