force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>The address of the job(This field was created for NPL MA).</description>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>