force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <description>22631 - Record ID of Address record used to initiate JHA</description>
    <label>Address ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>