force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Alternate_communication_is_established__c.field-meta.xml
<CustomField>
    <fullName>Alternate_communication_is_established__c</fullName>
    <description>Text of the flag for alternate communication(This field was created for NPL MA).</description>
    <label>Alternate communication is established</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>