force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Any_tasks_requiring_specialized_PPE__c.field-meta.xml
<CustomField>
    <fullName>Any_tasks_requiring_specialized_PPE__c</fullName>
    <description>Text of the flag for specialized PPE(This field was created for NPL MA).</description>
    <label>Any tasks requiring specialized PPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>