force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Appropriate_tooling_equipment_available__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_tooling_equipment_available__c</fullName>
    <description>Text of the flag for tooling/equipment(This field was created for NPL MA).</description>
    <label>Appropriate tooling/equipment available</label>
    <length>10</length>
    <type>Text</type>
</CustomField>