force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Appropriate_tooling_equipment_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Appropriate_tooling_equipment_Checkbox__c</fullName>
    <description>Flag for appropriate tooling and/or equipment(This field was created for NPL MA).</description>
    <formula>IF( Appropriate_tooling_equipment_available__c = &apos;Yes&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appropriate tooling/equipment  Checkbox</label>
    <type>Checkbox</type>
</CustomField>