force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Are_any_follow_up_actions_needed_related__c.field-meta.xml
<CustomField>
    <fullName>Are_any_follow_up_actions_needed_related__c</fullName>
    <description>Text of the flag for follow up actions(This field was created for NPL MA).</description>
    <label>Are any follow up actions needed related</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>