force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Are_Specialty_tools_being_used__c.field-meta.xml
<CustomField>
    <fullName>Are_Specialty_tools_being_used__c</fullName>
    <description>Text of the flag for specialty tools(This field was created for NPL MA).</description>
    <label>Are Specialty tools being used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>