force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Assigned_Crew__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Crew__c</fullName>
    <label>Assigned Crew</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>