force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Attachment10__c.field-meta.xml
<CustomField>
    <fullName>Attachment10__c</fullName>
    <description>Salesforce path to the attachment(This field was created for NPL MA).</description>
    <label>Attachment10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>