force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Attachment1__c.field-meta.xml
<CustomField>
    <fullName>Attachment1__c</fullName>
    <description>Salesforce path to the attachment(This field was created for NPL MA).</description>
    <label>Attachment1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>