force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Bore_card_required__c.field-meta.xml
<CustomField>
    <fullName>Bore_card_required__c</fullName>
    <description>Text of the flag for bore card(This field was created for NPL MA).</description>
    <label>Bore card required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>