force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Branching_Logic10__c.field-meta.xml
<CustomField>
    <fullName>Branching_Logic10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the Branching Logic entry(This field was created for NPL MA).</description>
    <label>Branching Logic10</label>
    <referenceTo>Branching_Logic__c</referenceTo>
    <relationshipName>SDOCS_Answers9</relationshipName>
    <type>Lookup</type>
</CustomField>