force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Branching_Logic_Long4__c.field-meta.xml
<CustomField>
    <fullName>Branching_Logic_Long4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the Branching Logic Long entry(This field was created for NPL MA).</description>
    <label>Branching Logic Long4</label>
    <referenceTo>Branching_Logic_Long__c</referenceTo>
    <relationshipName>NPL_JHA_for_SDOCS3</relationshipName>
    <type>Lookup</type>
</CustomField>