force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/cell_phone_coverage_confirmed__c.field-meta.xml
<CustomField>
    <fullName>cell_phone_coverage_confirmed__c</fullName>
    <description>Text of the flag for cell phone coverage(This field was created for NPL MA).</description>
    <label>cell phone coverage confirmed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>