force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Checkbox_for_Read_Stop_Work__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_for_Read_Stop_Work__c</fullName>
    <description>Flag for Read Stop Work(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Read_Stop_Work_Responsibility_Statement__c,&quot;Yes&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checkbox for Read Stop Work</label>
    <type>Checkbox</type>
</CustomField>