force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Confirm_specialty_tool_users_are_qualifi__c.field-meta.xml
<CustomField>
    <fullName>Confirm_specialty_tool_users_are_qualifi__c</fullName>
    <description>Text of the flag for specialty tool users(This field was created for NPL MA).</description>
    <label>Confirm specialty tool users are qualifi</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>