force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Confirm_specialty_tool_users_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Confirm_specialty_tool_users_checkbox__c</fullName>
    <description>Flag for specialty tool users(This field was created for NPL MA).</description>
    <formula>IF(  ISPICKVAL(Confirm_specialty_tool_users_are_qualifi__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirm specialty tool users checkbox</label>
    <type>Checkbox</type>
</CustomField>