force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Conga_Ready_for_PDF__c.field-meta.xml
<CustomField>
    <fullName>Conga_Ready_for_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>24402 - Flag to trigger JHA generation using Conga</description>
    <label>Conga Ready for PDF</label>
    <type>Checkbox</type>
</CustomField>