force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Contacted_Utility__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Utility__c</fullName>
    <description>Text of the flag for contacted utility(This field was created for NPL MA).</description>
    <label>Contacted Utility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>