force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Create_JHA_PDF__c.field-meta.xml
<CustomField>
    <fullName>Create_JHA_PDF__c</fullName>
    <description>##Conga created button:00b04000001kWDq</description>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[NPLJHAForSDOCS]0Q_007EAU099652?pv0=&quot; + Name + &quot;,[CriticalWorksPerform]0Q_010EAU042505,[VisitorInformation]0Q_012EAU251036,[FileImages]0Q_013EAU699867,[PersonnelSignatures]0Q_015EAU518829&quot; +
&quot;&amp;templateid=0T_081EAU773682&quot; +
&quot;&amp;defaultpdf=1&quot; +
&quot;&amp;ofn=&quot; + PDF_Name__c +
&quot;&amp;onedrivevisible=0&quot; +
&quot;&amp;ofp=FDM/Mid-America/JHA&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
    <label>Create JHA PDF</label>
    <type>Text</type>
</CustomField>