force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Critical_utility_crossings__c.field-meta.xml
<CustomField>
    <fullName>Critical_utility_crossings__c</fullName>
    <description>Text of the flag for critical utility crossings(This field was created for NPL MA).</description>
    <label>Critical utility crossings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>