force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Critical_Work_Steps__c.field-meta.xml
<CustomField>
    <fullName>Critical_Work_Steps__c</fullName>
    <description>(This field was created for NPL MA).</description>
    <label>Critical Work Steps</label>
    <length>80</length>
    <type>Text</type>
</CustomField>