force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Current_User_is_Foreman_on_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Foreman_on_Work_Order__c</fullName>
    <formula>IF( $User.Id =  Form__r.Work_Order__r.Foreman_SFS_User__c , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Foreman on Work Order</label>
    <type>Checkbox</type>
</CustomField>