force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Describe_Abnormal_Condition__c.field-meta.xml
<CustomField>
    <fullName>Describe_Abnormal_Condition__c</fullName>
    <description>Description of abnormal conditions on the job(This field was created for NPL MA).</description>
    <label>Describe Abnormal Condition</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>