force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Describe_Critical_utility__c.field-meta.xml
<CustomField>
    <fullName>Describe_Critical_utility__c</fullName>
    <description>Description of critical utility(This field was created for NPL MA).</description>
    <label>Describe Critical utility</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>