force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/describe_specialty_tools__c.field-meta.xml
<CustomField>
    <fullName>describe_specialty_tools__c</fullName>
    <description>Description of the specialty tools used(This field was created for NPL MA).</description>
    <label>describe specialty tools</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>