force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Describe_the_unplanned_event_s__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_unplanned_event_s__c</fullName>
    <description>Description of unplanned events(This field was created for NPL MA).</description>
    <label>Describe the unplanned event(s):</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>