force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Details_and_Actions_Taken__c.field-meta.xml
<CustomField>
    <fullName>Details_and_Actions_Taken__c</fullName>
    <description>Description of actions taken(This field was created for NPL MA).</description>
    <label>Details and Actions Taken</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>