force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Dewatering_performed_w_in_acceptable_lim__c.field-meta.xml
<CustomField>
    <fullName>Dewatering_performed_w_in_acceptable_lim__c</fullName>
    <description>Text of the flag for dewatering confirmation(This field was created for NPL MA).</description>
    <label>Dewatering performed w/in acceptable lim</label>
    <length>10</length>
    <type>Text</type>
</CustomField>