force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Did_any_unplanned_events_occur_today__c.field-meta.xml
<CustomField>
    <fullName>Did_any_unplanned_events_occur_today__c</fullName>
    <description>Text of the flag for unplanned events(This field was created for NPL MA).</description>
    <label>Did any unplanned events occur today?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>