force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Discuss_escape_plan_define_muster_poin__c.field-meta.xml
<CustomField>
    <fullName>Discuss_escape_plan_define_muster_poin__c</fullName>
    <description>Text of the flag for escape plan(This field was created for NPL MA).</description>
    <label>Discuss escape plan &amp; define muster poin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>