force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Does_Env_Control_Being_Used_Includ_Other__c.field-meta.xml
<CustomField>
    <fullName>Does_Env_Control_Being_Used_Includ_Other__c</fullName>
    <description>24401</description>
    <formula>IF( CONTAINS(  Environmenta_Controls_Being_Used_Long__c  , &quot;Other&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Does Env Control Being Used Includ Other</label>
    <type>Text</type>
</CustomField>