force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Does_Traffic_Control_Plan_Include_Other__c.field-meta.xml
<CustomField>
    <fullName>Does_Traffic_Control_Plan_Include_Other__c</fullName>
    <description>24401</description>
    <formula>IF( CONTAINS( Traffic_Control_Plan_Includes_Long__c , &quot;Other&quot;) , &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Does Traffic Control Plan Include Other</label>
    <type>Text</type>
</CustomField>