force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Emergency_Responder_will_be_met_at__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Responder_will_be_met_at__c</fullName>
    <description>Description of meeting place for emergency responder(This field was created for NPL MA).</description>
    <label>Emergency Responder will be met at</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>