force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Date text for end time(This field was created for NPL MA).</description>
    <label>End Time</label>
    <length>90</length>
    <type>Text</type>
</CustomField>