force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/ensure_spill_kits_checkbox__c.field-meta.xml
<CustomField>
    <fullName>ensure_spill_kits_checkbox__c</fullName>
    <description>Text of the flag for spill kits(This field was created for NPL MA).</description>
    <formula>IF(   Ensure_that_spill_kits_are_readily_avail__c   =&apos;Yes&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ensure spill kits checkbox</label>
    <type>Checkbox</type>
</CustomField>