force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Ensure_that_spill_kits_are_readily_avail__c.field-meta.xml
<CustomField>
    <fullName>Ensure_that_spill_kits_are_readily_avail__c</fullName>
    <description>Text of the flag for spill kits(This field was created for NPL MA).</description>
    <label>Ensure that spill kits are readily avail</label>
    <length>10</length>
    <type>Text</type>
</CustomField>