force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Environmenta_Controls_Being_Used_Long__c.field-meta.xml
<CustomField>
    <fullName>Environmenta_Controls_Being_Used_Long__c</fullName>
    <description>Description of environmental controls plus spaces for print form(This field was created for NPL MA).</description>
    <formula>IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Spill Kits available&apos;), &apos;Spill Kits available&apos; &amp; BR(), null) +
IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Dewatering performed&apos;), &apos;Dewatering performed&apos; &amp; BR(), null) +
IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Silt fence&apos;), &apos;Silt fence&apos; &amp; BR(), null) +
IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Straw wattles&apos;), &apos;Straw wattles&apos; &amp; BR(), null) +
IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Compost filter sock&apos;), &apos;Compost filter sock&apos; &amp; BR(), null) +
IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Storm drain protection&apos;), &apos;Storm drain protection&apos; &amp; BR(), null) +
IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Dust control&apos;), &apos;Dust control&apos; &amp; BR(), null) +
IF( INCLUDES(Environmental_Controls_being_used__c, &apos;Other&apos;), &apos;Other&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environmental Controls being used long</label>
    <type>Text</type>
</CustomField>