force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Environmental_Controls_being_used__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Controls_being_used__c</fullName>
    <description>Description of environmental controls(This field was created for NPL MA).</description>
    <label>Environmental Controls being used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spill Kits available</fullName>
            </value>
            <value>
                <fullName>Dewatering performed</fullName>
            </value>
            <value>
                <fullName>Silt fence</fullName>
            </value>
            <value>
                <fullName>Straw wattles</fullName>
            </value>
            <value>
                <fullName>Compost filter sock</fullName>
            </value>
            <value>
                <fullName>Storm drain protection</fullName>
            </value>
            <value>
                <fullName>Dust control</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>