force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Equipment_inspected_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Equipment_inspected_Checkbox__c</fullName>
    <description>Flag for equipment inspected(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Equipment_inspected_in_proper_conditio__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment inspected Checkbox</label>
    <type>Checkbox</type>
</CustomField>