force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Equipment_inspected_in_proper_conditio__c.field-meta.xml
<CustomField>
    <fullName>Equipment_inspected_in_proper_conditio__c</fullName>
    <description>Text of the flag for equipment inspected(This field was created for NPL MA).</description>
    <label>Equipment inspected &amp; in proper conditio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>