force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Excavating_within_5_of_Utility_Pole__c.field-meta.xml
<CustomField>
    <fullName>Excavating_within_5_of_Utility_Pole__c</fullName>
    <description>Text of the flag for 5&apos; excavation(This field was created for NPL MA).</description>
    <label>Excavating within 5&apos; of Utility Pole</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>