force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Excavation_present_or_being_created_toda__c.field-meta.xml
<CustomField>
    <fullName>Excavation_present_or_being_created_toda__c</fullName>
    <description>Text of the flag for excavation present(This field was created for NPL MA).</description>
    <label>Excavation present or being created toda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>