force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date text for expiration date(This field was created for NPL MA).</description>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>