force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Explain_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Explain_follow_up__c</fullName>
    <description>Description of follow up(This field was created for NPL MA).</description>
    <label>Explain follow up</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>