force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/ExportFlag__c.field-meta.xml
<CustomField>
    <fullName>ExportFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for export(This field was created for NPL MA).</description>
    <label>ExportFlag</label>
    <type>Checkbox</type>
</CustomField>