force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Feels_Like__c.field-meta.xml
<CustomField>
    <fullName>Feels_Like__c</fullName>
    <description>Text of feels like temp(This field was created for NPL MA).</description>
    <label>Feels Like</label>
    <length>10</length>
    <type>Text</type>
</CustomField>