force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Feels_Like_Number__c.field-meta.xml
<CustomField>
    <fullName>Feels_Like_Number__c</fullName>
    <description>Value of feels like temp(This field was created for NPL MA).</description>
    <formula>VALUE( Feels_Like__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feels Like Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>