force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Fire_Extinguishers_are_inspected_Checkbo__c.field-meta.xml
<CustomField>
    <fullName>Fire_Extinguishers_are_inspected_Checkbo__c</fullName>
    <description>Flag for inspected fire ext(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Fire_Extinguishers_are_inspected_upwin__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fire Extinguishers are inspected Checkbo</label>
    <type>Checkbox</type>
</CustomField>