force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Fire_Extinguishers_are_inspected_upwin__c.field-meta.xml
<CustomField>
    <fullName>Fire_Extinguishers_are_inspected_upwin__c</fullName>
    <description>Text of the flag for inspected fire ext(This field was created for NPL MA).</description>
    <label>Fire Extinguishers are inspected &amp; upwin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>