force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Youreka form object(This field was created for NPL MA).</description>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipName>SDOCS_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>