force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Form_Status__c</fullName>
    <description>22631</description>
    <formula>Form__r.disco__Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Status</label>
    <type>Text</type>
</CustomField>