force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Formal_ECP_or_SWPPP_has_been_Issued__c.field-meta.xml
<CustomField>
    <fullName>Formal_ECP_or_SWPPP_has_been_Issued__c</fullName>
    <description>Text of the flag for formal ECP(This field was created for NPL MA).</description>
    <label>Formal ECP or SWPPP has been Issued</label>
    <length>10</length>
    <type>Text</type>
</CustomField>