force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Gas_monitors_oxygen_sensors_calibrated_t__c.field-meta.xml
<CustomField>
    <fullName>Gas_monitors_oxygen_sensors_calibrated_t__c</fullName>
    <description>Text of the flag for gas monitors(This field was created for NPL MA).</description>
    <label>Gas monitors/oxygen sensors calibrated/t</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>