force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/GF_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>GF_Supervisor__c</fullName>
    <description>Supervisor name(This field was created for NPL MA).</description>
    <label>GF / Supervisor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>