force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/How_could_someone_get_seriously_injured__c.field-meta.xml
<CustomField>
    <fullName>How_could_someone_get_seriously_injured__c</fullName>
    <description>Description of how could someone get seriously injured(This field was created for NPL MA).</description>
    <label>How could someone get seriously injured</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>