force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/i_Certify__c.field-meta.xml
<CustomField>
    <fullName>i_Certify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Text of the flag for I certify(This field was created for NPL MA).</description>
    <label>i Certify</label>
    <type>Checkbox</type>
</CustomField>