force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Identify_line_of_fire_hazards__c.field-meta.xml
<CustomField>
    <fullName>Identify_line_of_fire_hazards__c</fullName>
    <description>Text of the flag for line of fire hazards(This field was created for NPL MA).</description>
    <label>Identify line of fire hazards</label>
    <length>10</length>
    <type>Text</type>
</CustomField>