force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Identify_line_of_fire_hazards_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Identify_line_of_fire_hazards_checkbox__c</fullName>
    <description>Flag for line of fire hazards(This field was created for NPL MA).</description>
    <formula>IF(   Identify_line_of_fire_hazards__c   =&apos;Yes&apos;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identify line of fire hazards checkbox</label>
    <type>Checkbox</type>
</CustomField>