force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Identify_slip_trip_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Identify_slip_trip_Checkbox__c</fullName>
    <description>Flag for identify slip(This field was created for NPL MA).</description>
    <formula>IF( ISPICKVAL(Identify_slip_trip_fall_hazards__c,&apos;Yes&apos;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identify slip, trip Checkbox</label>
    <type>Checkbox</type>
</CustomField>