force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/Identify_slip_trip_fall_hazards__c.field-meta.xml
<CustomField>
    <fullName>Identify_slip_trip_fall_hazards__c</fullName>
    <description>Text of the flag for identify slip(This field was created for NPL MA).</description>
    <label>Identify slip, trip, fall hazards</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>