force-app/main/default/objects/NPL_JHA_for_SDOCS__c/fields/if_traffic_control_other__c.field-meta.xml
<CustomField>
    <fullName>if_traffic_control_other__c</fullName>
    <description>Description of other traffic control(This field was created for NPL MA).</description>
    <label>if traffic control other</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>